@@ -1,0 +1,30 @@
+<?php
+/** Kashmiri (Devanagari) (कश्मीरी)
+ *
+ * See MessagesQqq.php for message documentation incl. usage of parameters
+ * To improve a translation please visit http://translatewiki.net
+ *
+ * @ingroup Language
+ * @file
+ *
+ */
+
+# @todo FIXME: Inherit almost everything for now
+
+$digitTransformTable = array(
+	'0' => '०', # &#x0966;
+	'1' => '१', # &#x0967;
+	'2' => '२', # &#x0968;
+	'3' => '३', # &#x0969;
+	'4' => '४', # &#x096a;
+	'5' => '५', # &#x096b;
+	'6' => '६', # &#x096c;
+	'7' => '७', # &#x096d;
+	'8' => '८', # &#x096e;
+	'9' => '९', # &#x096f;
+);
+
+$messages = array(
+# Recent changes
+'recentchanges' => 'नवि तबदीली',
+);
